# coupled-microstrip-DRL-shape-optimisation

./: .gitignore  README.md  agent_train.py  coupledstrip_env.py  hello.py  pyproject.toml  requirements.txt
src/: .gitignore  _types.py  agent_train.py  coupledstrip_env.py  coupledstrip_lib.py
src/even/: _hyper_parameter.py  _types.py  agent_train.py  coupledstrip_env.py  coupledstrip_lib.py  hybrid_algo.py  test_case.py
src/even/ga_lib/: ga_cpp.pyd  main.cpp
src/even/ga_lib/data/: CaseD_optimized_curve.csv  CaseD_predicted_curve.csv  CaseL_optimized_curve.csv  CaseL_predicted_curve.csv  energy_history_CaseD.csv  energy_history_CaseL.csv
src/even/ga_lib/include/: coupledstrip_lib.cpp  genetic_algorithm.cpp  genetic_algorithm.h
src/even/ga_lib/src/: ga_wrapper.cpp
src/even/ga_lib/src/include/: coupledstrip_lib.cpp  genetic_algorithm.cpp  genetic_algorithm.h
src/even/utils/: plot_curve.py  plot_train_metrics.py
src/ga_lib/: CMakeLists.txt  main.cpp
src/ga_lib/include/: coupledstrip_lib.cpp  coupledstrip_lib.h
src/odd/: _hyper_parameter.py  _types.py  agent_train.py  coupledstrip_env.py  coupledstrip_lib.py  hybrid_algo.py  test_case.py
src/odd/ga_lib/: CMakeLists.txt  ga_cpp.pyd  main.cpp
src/odd/ga_lib/data/: CaseD_optimized_curve.csv  CaseD_predicted_curve.csv  CaseL_optimized_curve.csv  CaseL_predicted_curve.csv  CaseL_predicted_curve.xlsx  energy_history.csv  energy_history_CaseD.csv  energy_history_CaseL.csv
src/odd/ga_lib/include/: coupledstrip_lib.cpp  coupledstrip_lib.h  file_io.cpp  file_io.h  genetic_algorithm.cpp  genetic_algorithm.h
src/odd/ga_lib/src/: CMakeLists.txt  ga_wrapper.cpp  main.cpp
src/odd/ga_lib/src/include/: coupledstrip_lib.cpp  coupledstrip_lib.h  genetic_algorithm.cpp  genetic_algorithm.h
src/odd/utils/: plot_curve.py
src/utils/: plot_curve.py  plot_train_metrics.py
training/caseD/images/: predicted_curve.csv  predicted_curve.xlsx
training/caseD/intermediate_prediction/: action_dataframe.csv
training/caseD/logs/CSA_ODD_1/: events.out.tfevents.1754303397.pvmod.836.0  events.out.tfevents.1754306273.pvmod.21228.0  events.out.tfevents.1754307136.pvmod.21660.0
training/caseD/logs/CSA_ODD_2/: events.out.tfevents.1754305827.pvmod.15820.0  events.out.tfevents.1754306676.pvmod.22496.0
training/caseL/intermediate_prediction/: action_dataframe.csv
training/caseL/logs/CSA_ODD_1/: events.out.tfevents.1754301934.pvmod.13832.0
training/caseL/logs/CSA_ODD_2/: events.out.tfevents.1754302034.pvmod.22880.0
training/caseL/logs/CSA_ODD_3/: events.out.tfevents.1754302154.pvmod.21440.0
training/caseL/logs/CSA_ODD_4/: events.out.tfevents.1754302599.pvmod.20796.0
training/caseL/logs/CSA_ODD_5/: events.out.tfevents.1754302955.pvmod.14872.0
training/caseL/logs/CSA_ODD_6/: events.out.tfevents.1754303186.pvmod.21988.0
