[project]
name = "coupled-microstrip-drl-shape-optimisation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch==2.7.1",
    "gymnasium==0.29.1",
    "matplotlib>=3.10.3",
    "numpy<2.3",
    "pandas>=2.3.1",
    "stable-baselines3==2.1.0",
    "numba==0.61.2",
    "tensorboard>=2.20.0",
]
