[project]
name = "coupled-microstrip-drl-shape-optimisation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch==2.10.0+cu126",
    "gymnasium==0.29.1",
    "matplotlib>=3.10.3",
    "numpy<2.3",
    "pandas>=2.3.1",
    "stable-baselines3==2.1.0",
    "numba==0.61.2",
    "tensorboard>=2.20.0",
    "scipy>=1.16.1",
    "tqdm>=4.67.1",
    "rich>=14.1.0",
    "openpyxl>=3.1.5",
]
